--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-validator": "^0.14.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.1",
+    "node-cron": "^4.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "typeorm": "^0.3.24"
