--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^9.4.3",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^6.2.0",
     "@nestjs/typeorm": "^10.0.1",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
@@ -35,6 +36,7 @@
     "node-cron": "^4.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.24"
   },
   "devDependencies": {
