--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@ DB_USERNAME=root
 DB_HOST=localhost
 DB_PORT=3306
 JWT_SECRET=KEY
+EMAIL_USER=congtug12@gmail.com
+EMAIL_PASS=lsrw fufj oscv hdjz
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
