--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.1",
     "node-cron": "^4.1.0",
+    "nodemailer": "^7.0.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "swagger-ui-express": "^5.0.1",
